k8s/merchandise.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merchandise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: merchandise
  template:
    metadata:
      labels:
        app: merchandise
    spec:
      containers:
      - name: merchandise
        image: ${DOCKER_USERNAME}/merchandise:${IMAGE_TAG}
        ports:
        - containerPort: 3003
        readinessProbe:
          httpGet:
            path: /health
            port: 3003
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3003
          initialDelaySeconds: 15
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3003  # Ajustar para cada servicio
    nodePort: 30003   # Usar un puerto único entre 30000-32767 para cada servicio
  selector:
    app: ${SERVICE_NAME}
